--- a/backend-rest/package.json
+++ b/backend-rest/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "amadeus": "^9.1.0",
+    "axios": "^1.6.8",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.1",
     "compression": "^1.7.4",
