--- a/backend-rest/package.json
+++ b/backend-rest/package.json
@@ -18,7 +18,10 @@
     "jsonwebtoken": "^8.5.1",
     "method-override": "^2.3.10",
     "mongoose": "^5.13.14",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.8.0",
+    "graphql-date": "^1.0.3"
   },
   "scripts": {
     "start": "nodemon server",
