--- a/backend-rest/package.json
+++ b/backend-rest/package.json
@@ -14,14 +14,14 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "express-graphql": "^0.12.0",
     "express-session": "^1.17.2",
+    "graphql": "^15.8.0",
+    "graphql-date": "^1.0.3",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^2.3.10",
     "mongoose": "^5.13.14",
-    "morgan": "^1.10.0",
-    "express-graphql": "^0.12.0",
-    "graphql": "^15.8.0",
-    "graphql-date": "^1.0.3"
+    "morgan": "^1.10.0"
   },
   "scripts": {
     "start": "nodemon server",
