--- a/backend-rest/package.json
+++ b/backend-rest/package.json
@@ -1,28 +1,21 @@
 {
   "name": "backend-rest",
-  "version": "0.0.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
+  "type": "module",
   "scripts": {
-    "start": "nodemon server.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "amadeus": "^9.1.0",
-    "axios": "^1.6.7",
-    "bcrypt": "^5.1.1",
-    "bootstrap": "^5.3.2",
-    "connect-flash": "^0.1.1",
-    "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
-    "debug": "~2.6.9",
     "dotenv": "^16.4.5",
-    "ejs": "~2.6.1",
-    "express": "~4.16.1",
-    "express-session": "^1.18.0",
-    "http-errors": "~1.6.3",
-    "jsonwebtoken": "^9.0.2",
-    "method-override": "^3.0.0",
-    "mongoose": "^8.2.0",
-    "morgan": "~1.9.1",
+    "express": "^4.18.3",
     "nodemon": "^3.1.0"
   }
 }
